--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
     <EditText
         android:id="@+id/editTextText"
         android:layout_width="267dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:backgroundTint="@color/design_default_color_primary"
         android:ems="10"
 
@@ -63,16 +63,16 @@
         android:background="@drawable/button_rounded"/>
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="267dp"
-        android:layout_height="wrap_content"
-        android:text="Registrarse"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/btnIrASpinnerDesdeMain"
+        android:layout_width="266dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="464dp"
+        android:onClick="irASpinnerDesdeMain"
+        android:text="Registro"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.715"
-        android:background="@drawable/button_rounded_empty"/>
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <ImageButton
         android:id="@+id/imageButton3"
@@ -119,4 +119,11 @@
         app:layout_constraintVertical_bias="0.921"
         app:srcCompat="@drawable/instagram" />
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/spinner_options"
+        android:minHeight="32dp"
+        tools:layout_editor_absoluteX="16dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
