--- a/app/src/main/res/layout/activity_spinner.xml
+++ b/app/src/main/res/layout/activity_spinner.xml
@@ -4,15 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".spinner">
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/spinner_options"
-        android:minHeight="32dp"
-        tools:layout_editor_absoluteX="16dp" />
+    tools:context=".spinner"
+    android:background="#205689">
 
 
     <LinearLayout
@@ -21,6 +14,13 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/spinner_options"
+            android:minHeight="32dp" />
 
         <EditText
             android:id="@+id/editTextCorreo"
