--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#202732">
+    android:background="#205689">
 
     <ImageView
         android:id="@+id/imageView"
@@ -55,24 +55,25 @@
         android:layout_width="267dp"
         android:layout_height="wrap_content"
         android:text="Login"
+        android:onClick="iraInicioDesdeMain"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.62"
-        android:background="@drawable/button_rounded"/>
+        />
 
     <Button
         android:id="@+id/btnIrASpinnerDesdeMain"
         android:layout_width="266dp"
         android:layout_height="49dp"
-        android:layout_marginTop="464dp"
+        android:layout_marginTop="36dp"
         android:onClick="irASpinnerDesdeMain"
         android:text="Registro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <ImageButton
         android:id="@+id/imageButton3"
@@ -123,7 +124,9 @@
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/spinner_options"
+        android:entries="@array/spinner_optionss"
         android:minHeight="32dp"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
