--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -50,7 +50,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Nombre de la Imagen 1"
+                        android:text="Agumon"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -84,7 +84,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Nombre de la Imagen 1"
+                        android:text="Gabumon"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -119,7 +119,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Nombre de la Imagen 1"
+                        android:text="Patamon"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -154,7 +154,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Nombre de la Imagen 1"
+                        android:text="Gatomon"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -189,7 +189,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Nombre de la Imagen 1"
+                        android:text="Greymon"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -224,7 +224,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Nombre de la Imagen 1"
+                        android:text="MetalGreymon"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -259,7 +259,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Nombre de la Imagen 1"
+                        android:text="Angemon"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -294,7 +294,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Nombre de la Imagen 1"
+                        android:text="Garurumon"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </LinearLayout>
