--- a/app/src/main/res/layout/activity_splashview.xml
+++ b/app/src/main/res/layout/activity_splashview.xml
@@ -49,7 +49,15 @@
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="174dp"
+        android:layout_above="@+id/imageView3"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="81dp"
+        android:layout_marginEnd="112dp"
+        android:layout_marginBottom="27dp"
         app:srcCompat="@drawable/logodgo" />
 
 </RelativeLayout>
